<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ItCanWait</string>
    <string name="action_settings">Settings</string>
    <string name="homework_button">Homework</string>
    <string name="driving_button">Driving</string>
    <string name="friends_button">Friends</string>
    <string name="study_button">Study</string>
    <string name="family_button">Family</string>
    <string name="movie_button">Movie</string>
    <string name="start">Start</string>
 	<string name="select_time">Select Time</string>
</resources>
