<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/score_label"
        android:text="Total Score"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>    
    <TextView
        android:id="@+id/score_text"
        android:textSize="32sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        
        <Button
            android:id="@+id/homework_button"
            android:layout_width="180sp"
            android:layout_height="120sp"
            android:text="@string/homework_button"/>

        <Button
            android:id="@+id/driving_button"
            android:layout_width="180sp"
            android:layout_height="120sp"
            android:text="@string/driving_button" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        
        <Button
            android:id="@+id/friends_button"
            android:layout_width="180sp"
            android:layout_height="120sp"
            android:text="@string/friends_button" />

        <Button
            android:id="@+id/study_button"
            android:layout_width="180sp"
            android:layout_height="120sp"
            android:text="@string/study_button" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        
        <Button
            android:id="@+id/family_button"
            android:layout_width="180sp"
            android:layout_height="120sp"
            android:text="@string/family_button" 
            />

        <Button 
            android:id="@+id/movie_button"
            android:layout_width="180sp"
            android:layout_height="120sp"
            android:text="@string/movie_button" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        
        <EditText
            android:id="@+id/email_textfield"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint="Enter email address"
            />

        <Button 
            android:id="@+id/share_point_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="Share Points!" />
    </LinearLayout>
    
    
    
</LinearLayout>